--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "compass",
   "version": "1.0.0",
   "license": "MIT",
+  "homepage": "https://neftxx.github.io/brujula-react/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
